--- a/index.html
+++ b/index.html
@@ -57,13 +57,9 @@
                     </div>
                     <div class="collapse navbar-collapse" id="main_nav">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a class="nav-link" href="#home">Inicio</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#countdown">Contador</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#speakers">Oradores</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#schedule">Fecha</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#gallery">Galeria</a></li>
-                            <!-- <li class="nav-item"><a class="nav-link" href="#join-event">Unirse</a></li> -->
-                            <li class="nav-item"><a class="nav-link" href="#location">Ubicacion</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#speakers">Conferencistas</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#schedule">Actividades</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#gallery">Ubicación</a></li>
                         </ul>
                         <div class="nav-right">
                             <!-- <div class="search-btn">
@@ -104,7 +100,7 @@
                     <div class="scroller"></div>
                 </div>
             </div>
-            <div class="hero-slider owl-carousel ">
+            <div class="hero-slider owl-carousel owl-theme">
                 <div class="hero-single">
                     <video class="hero-video" src="assets/img/banner.mp4" autoplay loop></video>
                     <!-- <div class="container">
@@ -134,6 +130,10 @@
                         </div>
                     </div> -->
                 </div>
+                <div class="hero-single hero-single-gradient">
+                    <div class="hero-globe"></div>
+                    <div class="hero-logo"></div>
+                </div>
             </div>
         </div>
         <!-- hero slider end -->
@@ -146,7 +146,7 @@
                     <div class="col-lg-5">
                         <div class="site-heading mb-3">
                             <!-- <span class="site-title-tagline">Event Countdown</span> -->
-                            <h2 class="site-title" style="color: white; text-transform: uppercase;">
+                            <h2 class="site-title" style="color: white; text-transform: uppercase; font-size: 42px;">
                                 El congreso <br/> inicia en:
                             </h2>
                         </div>
@@ -168,7 +168,7 @@
                     <div class="col-lg-12">
                         <div class="site-heading text-center wow fadeInDown" data-wow-delay=".25s">
                             <!-- <span class="site-title-tagline">Speakers</span> -->
-                            <h2 class="site-title">nuestros <br/> <span>Conferencistas</span></h2>
+                            <h2 class="site-title">nuestros <span>Conferencistas</span></h2>
                             <div class="site-shadow-text">Conferencistas</div>
                         </div>
                     </div>
@@ -253,7 +253,7 @@
                     <div class="col-6 col-md-3 col-lg-2 openModalBtn" data-modal="marcos">
                         <div class="team-item">
                             <div class="team-img">
-                                <img src="assets/img/speaker/04.jpg" alt="">
+                                <img src="assets/img/conferencistas/marcos-francisco-masso-garrote.png" alt="">
                             </div>
                             <div class="team-content">
                                 <div class="social">
@@ -350,13 +350,13 @@
         </div>
 
         <!-- schedule area -->
-        <div class="schedule-area py-120 bg">
+        <div class="schedule-area py-120 bg" id="schedule">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="site-heading text-center wow fadeInDown" data-wow-delay=".25s">
                             <!-- <span class="site-title-tagline">Calendario de actividades</span> -->
-                            <h2 class="site-title">Calendario de <br/> <span>actividades</span></h2>
+                            <h2 class="site-title">Calendario de <span>actividades</span></h2>
                             <div class="site-shadow-text">Actividades</div>
                         </div>
                     </div>
@@ -397,7 +397,7 @@
                                     <span class="schedule-count">01</span>
                                     <div class="schedule-content-wrap">
                                         <div class="schedule-img">
-                                            <img src="assets/img/schedule/01.jpg" alt="">
+                                            <img src="assets/img/conferencistas/luis-leonardo-almagro-lemes.jpg" alt="">
                                         </div>
                                         <div class="schedule-content">
                                             <div class="schedule-info">
@@ -415,60 +415,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-12">
-                                <div class="schedule-item">
-                                    <span class="schedule-count">02</span>
-                                    <div class="schedule-content-wrap">
-                                        <div class="schedule-img">
-                                            <img src="assets/img/schedule/02.jpg" alt="">
-                                        </div>
-                                        <div class="schedule-content">
-                                            <div class="schedule-info">
-                                                <div class="schedule-meta">
-                                                    <ul>
-                                                        <li><i class="far fa-clock"></i> 10.00 AM - 12.00 PM</li>
-                                                        <li><i class="far fa-location-dot"></i> 25/B Milford, New York
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <h4><a href="#">Introduction Digital Technology Conference.</a></h4>
-                                                <p>There are many variations of passages available but the majority have
-                                                    suffered alteration in some form by injected humour, or randomised
-                                                    words
-                                                    which don't look even slightly believable.</p>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="schedule-item last">
-                                    <span class="schedule-count">03</span>
-                                    <div class="schedule-content-wrap">
-                                        <div class="schedule-img">
-                                            <img src="assets/img/schedule/03.jpg" alt="">
-                                        </div>
-                                        <div class="schedule-content">
-                                            <div class="schedule-info">
-                                                <div class="schedule-meta">
-                                                    <ul>
-                                                        <li><i class="far fa-clock"></i> 10.00 AM - 12.00 PM</li>
-                                                        <li><i class="far fa-location-dot"></i> 25/B Milford, New York
-                                                        </li>
-                                                    </ul>
-                                                </div>
-                                                <h4><a href="#">International Technology Summit Conference.</a></h4>
-                                                <p>There are many variations of passages available but the majority have
-                                                    suffered alteration in some form by injected humour, or randomised
-                                                    words
-                                                    which don't look even slightly believable.</p>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <!-- tab 2 -->
@@ -480,7 +426,7 @@
                                     <span class="schedule-count">01</span>
                                     <div class="schedule-content-wrap">
                                         <div class="schedule-img">
-                                            <img src="assets/img/schedule/01.jpg" alt="">
+                                            <img src="assets/img/conferencistas/mu-kien-adriana-sang-ben.jpg" alt="">
                                         </div>
                                         <div class="schedule-content">
                                             <div class="schedule-info">
@@ -504,7 +450,7 @@
                                     <span class="schedule-count">02</span>
                                     <div class="schedule-content-wrap">
                                         <div class="schedule-img">
-                                            <img src="assets/img/schedule/02.jpg" alt="">
+                                            <img src="assets/img/conferencistas/roman-andres-jaquez-lirazo.jpg" alt="">
                                         </div>
                                         <div class="schedule-content">
                                             <div class="schedule-info">
@@ -527,7 +473,7 @@
                                     <span class="schedule-count">03</span>
                                     <div class="schedule-content-wrap">
                                         <div class="schedule-img">
-                                            <img src="assets/img/schedule/03.jpg" alt="">
+                                            <img src="assets/img/conferencistas/marcos-francisco-masso-garrote.png" alt="">
                                         </div>
                                         <div class="schedule-content">
                                             <div class="schedule-info">
@@ -550,7 +496,7 @@
                                     <span class="schedule-count">04</span>
                                     <div class="schedule-content-wrap">
                                         <div class="schedule-img">
-                                            <img src="assets/img/schedule/03.jpg" alt="">
+                                            <img src="assets/img/conferencistas/carolina-mejia.jpg" alt="" style="object-position: center;">
                                         </div>
                                         <div class="schedule-content">
                                             <div class="schedule-info">
@@ -671,8 +617,7 @@
                                 <img src="assets/img/logo.png" alt="">
                             </a>
                             <p class="mb-3">
-                                We are many variations of passages available majority have suffered
-                                in some injected content of a page when looking at its layout humour words believable.
+                                Tribunal Superior Electoral <br/> ¡Tribunal de la democracia!
                             </p>
                             <!-- <div class="footer-newsletter">
                                 <p>Subscribe Our Newsletter</p>
@@ -734,7 +679,7 @@
                 <div class="row">
                     <div class="col-md-6 align-self-center">
                         <p class="copyright-text">
-                            &copy; Copyright <span id="date"></span> <a href="#"> Eventu </a> All Rights Reserved.
+                            &copy; Copyright <span id="date"></span> <a href="#"> TSE </a> All Rights Reserved.
                         </p>
                     </div>
                     <div class="col-md-6 align-self-center">
