--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 </div>
                                 <div class="info">
                                     <h4><a href="#">Luis Leonardo Almagro Lemes</a></h4>
-                                    <span>Abogado, Diplomático y Político</span>
+                                    <span>Acto inaugural</span>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                                 </div>
                                 <div class="info">
                                     <h4><a href="#">Mu-Kien Adriana <br/> Sang Ben</a></h4>
-                                    <span>Historiadora, ensayista, analista, politóloga y educadora</span>
+                                    <span>Desafío de la democracia dominicana</span>
                                 </div>
                             </div>
                         </div>
@@ -226,7 +226,7 @@
                                 </div>
                                 <div class="info">
                                     <h4><a href="#">Carolina Mejia</a></h4>
-                                    <span>Economista y Especialista en Marketing</span>
+                                    <span>Gobierno y democracia</span>
                                 </div>
                             </div>
                         </div>
@@ -245,7 +245,7 @@
                                 </div>
                                 <div class="info">
                                     <h4><a href="#">Román Andres Jáquez Lirazo</a></h4>
-                                    <span>Especialista en Estudios Políticos y Electorales</span>
+                                    <span>Elecciones, ciudadanía y democracia</span>
                                 </div>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                                 </div>
                                 <div class="info">
                                     <h4><a href="#">Marcos Francisco Masso Garrote</a></h4>
-                                    <span>Abogado y Doctor en Derecho</span>
+                                    <span>La democracia constitucional en américa latina</span>
                                 </div>
                             </div>
                         </div>
