update images routes

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <div class="hero-slider owl-carousel owl-theme">
                 <div class="hero-single">
-                    <video class="hero-video" src="/assets/img/banner.mp4" autoplay loop></video>
+                    <video class="hero-video" src="assets/img/banner.mp4" autoplay loop></video>
                     <!-- <div class="container">
                         <div class="row align-items-center">
                             <div class="col-lg-7 mx-auto">
