gradient background banner

--- a/index.html
+++ b/index.html
@@ -100,38 +100,13 @@
                     <div class="scroller"></div>
                 </div>
             </div>
-            <div class="hero-slider owl-carousel owl-theme">
-                <div class="hero-single">
+            <div class="hero-slider owl-carousel"> <!-- owl-theme -->
+                <!-- <div class="hero-single">
                     <video class="hero-video" src="assets/img/banner.mp4" autoplay loop></video>
-                    <!-- <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-lg-7 mx-auto">
-                                <div class="hero-content text-center">
-                                    <div class="hero-date" data-animation="fadeInDown" data-delay=".25s">
-                                        <h1>25</h1>
-                                        <div class="date-content">
-                                            <span>May 2024</span>
-                                            <p>25/B Milford Road, New York, USA</p>
-                                        </div>
-                                    </div>
-                                    <h1 class="hero-title" data-animation="fadeInRight" data-delay=".50s">
-                                        Digital World <span>Conference</span> Meetup
-                                    </h1>
-                                    <p data-animation="fadeInLeft" data-delay=".75s">
-                                        There are many variations of passages available but the majority have
-                                        suffered alteration in some form by injected humour.
-                                    </p>
-                                    <div class="hero-btn justify-content-center" data-animation="fadeInUp"
-                                        data-delay="1s">
-                                        <a href="#" class="theme-btn">Inscribete ahora<i class="fas fa-arrow-right"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
-                </div>
+                </div> -->
                 <div class="hero-single hero-single-gradient">
-                    <div class="hero-globe"></div>
+                    <img class="hero-img" src="assets/img/banner.png"></img>
+                    <!-- <div class="hero-globe"></div> -->
                     <div class="hero-logo"></div>
                 </div>
             </div>
