--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <div class="col-lg-12">
                         <div class="site-heading text-center wow fadeInDown" data-wow-delay=".25s">
                             <!-- <span class="site-title-tagline">Speakers</span> -->
-                            <h2 class="site-title">nuestros <span>Conferencistas</span></h2>
+                            <h2 class="site-title">Nuestros <span>conferencistas</span></h2>
                             <div class="site-shadow-text">Conferencistas</div>
                         </div>
                     </div>
