--- a/index.html
+++ b/index.html
@@ -466,8 +466,8 @@
                                                     <li style="list-style-type: disc;">Palabras de bienvenida, a cargo
                                                         del señor Ygnacio Pascual Camacho Hidalgo, juez presidente del
                                                         Tribunal Superior Electoral.</li>
-                                                    <li style="list-style-type: disc;">Presentación de ponentes, a cargo
-                                                        del maestro de ceremonias.</li>
+                                                    <!-- <li style="list-style-type: disc;">Presentación de ponentes, a cargo
+                                                        del maestro de ceremonias.</li> -->
                                                 </ul>
                                             </div>
                                         </div>
