--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                             class="fab fa-instagram" style="pointer-events: none;"></i></a>
                                 </div>
                                 <div class="info">
-                                    <h4><a href="#">Marcos Francisco Masso Garrote</a></h4>
+                                    <h4><a href="#">Marcos Francisco Massó Garrote</a></h4>
                                     <span>Democracia constitucional en América Latina</span>
                                 </div>
                             </div>
@@ -360,11 +360,11 @@
         <div id="marcos" class="modal">
             <div class="modal-content">
                 <div class="modal-head">
-                    <h4 id="modalText4">Marcos Francisco Masso Garrote</h4>
+                    <h4 id="modalText4">Marcos Francisco Massó Garrote</h4>
                     <span class="close">&times;</span>
                 </div>
                 <p>
-                    Marcos Francisco Masso Garrote, egresado de Derecho de la Universidad de Castilla La Mancha en el
+                    Marcos Francisco Massó Garrote, egresado de Derecho de la Universidad de Castilla La Mancha en el
                     año 1992 posee un
                     doctorado en Doctor en Derecho graduado como Suma Cum Laude de la Universidad de Castilla la Mancha
                     en el 1996.
@@ -463,8 +463,7 @@
                                                 </div>
                                                 <h4><a href="#">Palabras de bienvenida</a></h4>
                                                 <ul style="margin-left: 20px;">
-                                                    <li style="list-style-type: disc;">Palabras de bienvenida, a cargo
-                                                        del señor Ygnacio Pascual Camacho Hidalgo, juez presidente del
+                                                    <li style="list-style-type: disc;">Ygnacio Pascual Camacho Hidalgo, juez presidente del
                                                         Tribunal Superior Electoral.</li>
                                                     <!-- <li style="list-style-type: disc;">Presentación de ponentes, a cargo
                                                         del maestro de ceremonias.</li> -->
